@@ -1,0 +1,3 @@
+signal-spam.eplug.xml
+signal-spam.xml
+signal-spam.c
